# photo_print

./: .gitignore  CLAUDE.md  Photo_Border_Automation_Init.md  Photo_Border_Automation_Init_EN.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/photo_border/cli/: main.py
src/photo_border/core/: batch.py  border.py  color.py  config_builder.py  constants.py  errors.py  geometry.py  io.py  metadata.py  models.py  pipeline.py
src/photo_border/web/: app.py  logic.py
tests/cli/: test_main.py
tests/unit/: test_batch.py  test_border.py  test_color.py  test_config_builder.py  test_core_boundaries.py  test_geometry.py  test_io.py  test_metadata.py  test_pipeline.py
tests/web/: test_app_smoke.py  test_logic.py
