[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-border"
version = "0.1.0"
description = "模仿 Lightroom for iPad 加邊框匯出功能的批次照片處理工具"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.2,<11",
    "piexif==1.1.3",
    "PyYAML>=6.0",
    "typer>=0.12",
    "tqdm>=4.66",
    "pillow-heif>=0.16",
]

[project.optional-dependencies]
web = ["streamlit>=1.35"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
photo-border = "photo_border.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/photo_border"]
# web/app.py 由 streamlit.testing.v1.AppTest 覆蓋（見 tests/web/test_app_smoke.py），
# 但 AppTest 在獨立執行環境跑腳本，coverage.py 量不到，故排除在統計外。
omit = ["src/photo_border/web/app.py"]

[tool.coverage.report]
fail_under = 80
